@@ -164,7 +164,7 @@ public class Verifier {
     }
 
     public void execute() throws VerificationException {
-        final List<String> args = new ArrayList<>(defaultCliArguments);
+        List<String> args = new ArrayList<>(defaultCliArguments);
         for (String cliArgument : cliArguments) {
             args.add(cliArgument.replace("${basedir}", getBasedir()));
         }
@@ -184,11 +184,9 @@ public class Verifier {
                     .orElse("");
             if (!itTail.isEmpty()) {
                 // remove it
-                ArrayList<String> copy = new ArrayList<>(args);
-                args.clear();
-                args.addAll(copy.stream()
+                args = args.stream()
                         .filter(s -> !s.startsWith("-Dmaven.repo.local.tail="))
-                        .toList());
+                        .collect(Collectors.toList());
             }
 
             // push things to tail
@@ -209,20 +207,6 @@ public class Verifier {
             args.add(0, "-l");
         }
 
-        ExecutorHelper.Mode mode = executorHelper.getDefaultMode();
-        if (forkJvm) {
-            mode = ExecutorHelper.Mode.FORKED;
-        }
-        if (mode != ExecutorHelper.Mode.FORKED) {
-            // embedded mode will not pick up MAVEN_ARGS, if exists
-            String userHome = System.getenv("MAVEN_ARGS");
-            if (userHome != null && !userHome.isEmpty()) {
-                Arrays.stream(userHome.split(" "))
-                        .filter(s -> !s.trim().isEmpty())
-                        .forEach(s -> args.add(0, s));
-            }
-        }
-
         try {
             ExecutorRequest.Builder builder = executorHelper
                     .executorRequest()
@@ -237,6 +221,10 @@ public class Verifier {
                 builder.environmentVariables(environmentVariables);
             }
 
+            ExecutorHelper.Mode mode = executorHelper.getDefaultMode();
+            if (forkJvm) {
+                mode = ExecutorHelper.Mode.FORKED;
+            }
             ByteArrayOutputStream stdout = new ByteArrayOutputStream();
             ByteArrayOutputStream stderr = new ByteArrayOutputStream();
             ExecutorRequest request =
